# pocket-assistant

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android-ci.yml  backend-ci.yml  security.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/pocketassistant/app/: MainActivity.kt  PocketApp.kt
android/app/src/main/java/com/pocketassistant/app/audio/: AudioRecorder.kt  Feedback.kt
android/app/src/main/java/com/pocketassistant/app/data/: SecureStore.kt  SettingsStore.kt
android/app/src/main/java/com/pocketassistant/app/net/: ApiClient.kt  ApiService.kt  Dtos.kt
android/app/src/main/java/com/pocketassistant/app/stt/: Transcriber.kt  VoskTranscriber.kt
android/app/src/main/java/com/pocketassistant/app/ui/: CaptureViewModel.kt  PocketAppScreen.kt  Screens.kt
android/app/src/main/java/com/pocketassistant/app/ui/theme/: Theme.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/src/pocket/: __init__.py
backend/src/pocket/api/: __init__.py  deps.py  main.py
backend/src/pocket/api/routers/: audit.py  captures.py  devices.py  proposals.py  summary.py  tasks.py
backend/src/pocket/core/: __init__.py  config.py  errors.py  idempotency.py  logging.py  security.py
backend/src/pocket/db/: __init__.py  base.py  enums.py  models.py  session.py  types.py
backend/src/pocket/domain/: __init__.py  audit.py  execute.py  interpret.py  policy.py  summary.py  tasks.py
backend/src/pocket/integrations/: __init__.py  base.py  claude.py  claude_cli.py  gmail.py  mock.py  registry.py
backend/src/pocket/media/: __init__.py  store.py
backend/src/pocket/schemas/: __init__.py  actions.py  api.py
backend/src/pocket/workers/: __init__.py  reminders.py  scheduler.py
backend/tests/: conftest.py
backend/tests/integration/: test_capture_flows.py  test_corrections_and_date.py  test_input_validation.py  test_tasks_and_idempotency.py  test_transcript_logging.py
backend/tests/unit/: test_claude_cli_llm.py  test_claude_llm.py  test_gmail.py  test_media_path_safety.py  test_media_prune.py  test_policy.py  test_scheduler.py  test_task_logic.py
deploy/: .env.example  docker-compose.yml
docs/: android-testing.md  deploy-mini.md  dev-local.md  security.md
docs/runbooks/: secret-rotation.md
scripts/: export-corrections.sh  fetch-vosk-model.sh  gmail-authorize.py  sync-to-mini.sh
