[project]
name = "pocket-assistant-backend"
version = "0.1.0"
description = "Pocket Assistant backend: FastAPI API, workers, and (mocked) integrations."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<2",
    "structlog>=24.4,<25",
    "python-multipart>=0.0.12,<0.1",
    "httpx>=0.27,<0.28",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2,<4"]
# Real Claude provider. Optional so the app/tests run fully mocked without it.
claude = ["anthropic>=0.40"]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "ruff>=0.8,<0.9",
    "mypy>=1.13,<2",
    "bandit>=1.7,<2",
    "pip-audit>=2.7,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pocket"]

[tool.uv]
# Default extras installed by `uv sync`. CI uses `--all-extras`.
default-groups = []

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "PTH"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic.

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
mypy_path = "src"
packages = ["pocket"]

# anthropic is an optional dep; treat it as untyped so the codebase type-checks
# whether or not it is installed (the adapter holds the client as Any anyway).
[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.bandit]
exclude_dirs = ["tests"]
